[package]
name = "gifme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
base64 = "0.21.5"
clap = { version="4.4.8", features=["derive"] }
query_params = "0.1.0"
reqwest = "0.11.22"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version="1.34.0", features=["macros", "rt-multi-thread"] }
